# pycharm-debugger-issue

./: README.md  docker-compose.yml  pyproject.toml
exampleapp/: Dockerfile  requirements.txt
exampleapp/exampleapp/: settings.py  urls.py
