[tool.poetry]
name = "pycharm-example"
version = "0.1.0"
description = ""
authors = ["Ariel Torti <arieltorti14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
